fix: align assistant message block with avatar column

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -177,6 +177,11 @@ body.body--light {
     margin-left: 0 !important;
     margin-right: 0 !important;
   }
+
+  .md-editor-preview {
+    padding-left: 6px !important;
+    padding-right: 20px !important;
+  }
 }
 
 :not(pre)>code {
